--- a/Yordanov_M_FinalProjectCS23/StoreInventory.xaml
+++ b/Yordanov_M_FinalProjectCS23/StoreInventory.xaml
@@ -25,8 +25,7 @@
             <Border Margin="0, -215, 0, 0" Height="60" Width="400" Background="#EF798A" CornerRadius="25" >
                 <Label HorizontalAlignment="Center" VerticalAlignment="Center" Content="Store Inventory" Foreground="#B75D69" FontSize="32" FontFamily="MS Gothic"   ></Label>
             </Border>
-            <Button VerticalAlignment="Top" Height="60" Background="Transparent" BorderBrush="Transparent" Click="Button_Click" />
-            <DataGrid HorizontalAlignment="Left" Height="242" Margin="311,155,0,0" VerticalAlignment="Top" Width="454"/>
+            <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Height="242" Margin="311,155,0,0" VerticalAlignment="Top" Width="454"/>
             <Border Margin="46,312,497.667,59"  Background="#B75D69" CornerRadius="20">
                 <Button Background="Transparent" Content="Load" FontSize="20" FontFamily="MS Gothic" Foreground="#C2D0D1" BorderBrush ="Transparent" Click="Button_Click" Margin="0,0,-0.333,0.333"/>
             </Border>
@@ -34,9 +33,12 @@
                 <Label HorizontalAlignment="Center" VerticalAlignment="Center" Content="Choose Store" Foreground="#C2D0D1" FontSize="20" FontFamily="MS Gothic"  />
             </Border>
             <Border Margin="46,231,497.667,140" BorderThickness="3" BorderBrush="#EF798A" Background="Transparent" CornerRadius="20"/>
-            <ComboBox Background="Transparent" Foreground="Transparent" BorderBrush="Transparent" HorizontalAlignment="Left" Margin="53,237,0,0" VerticalAlignment="Top" Width="236" Height="38"/>
-
-
+            <ComboBox x:Name="combobox" Background="Transparent" Foreground="Transparent" BorderBrush="Transparent" HorizontalAlignment="Left" Margin="53,237,0,0" VerticalAlignment="Top" Width="236" Height="38">
+                <ComboBoxItem Content="Store 1" Foreground="Black"/>
+                <ComboBoxItem Content="Store 2" Foreground="Black"/>
+                <ComboBoxItem Content="Store 3" Foreground="Black"/>
+            </ComboBox>
+            <Button VerticalAlignment="Top" Height="60" Background="Transparent" BorderBrush="Transparent" Click="Home" />
 
 
 
